--- a/roles/proxy_server/tasks/apps_config.yml
+++ b/roles/proxy_server/tasks/apps_config.yml
@@ -1,16 +1,16 @@
 - name: Copy in the site config for the app host
   register: addconfig
   ansible.builtin.template:
-    src: proxied.conf.j2
-    dest: '/etc/nginx/sites-available/proxied.conf'
+    src: apps.conf.j2
+    dest: '/etc/nginx/sites-available/apps.conf'
     owner: root
     group: root
     validate: "nginx -t -c %s"
 
-- name: Enable the proxied site config
+- name: Enable the apps_config site config
   ansible.builtin.file:
-    src: '/etc/nginx/sites-available/proxied.conf'
-    dest: '/etc/nginx/sites-enabled/proxied.conf'
+    src: '/etc/nginx/sites-available/apps.conf'
+    dest: '/etc/nginx/sites-enabled/apps.conf'
     state: link
   when: not ansible_check_mode
 
@@ -24,6 +24,6 @@
 - name: Including domain for golang
   ansible.builtin.lineinfile:
     path: /etc/hosts
-    line: '127.0.0.1 {{ golang_host_domain }}'
+    line: '127.0.0.1 {{ golang_app_domain }}'
     insertafter: EOF
     state: present
