--- a/roles/app_server/tasks/main.yml
+++ b/roles/app_server/tasks/main.yml
@@ -3,6 +3,15 @@
   ansible.builtin.apt:
     update_cache: yes
     upgrade: yes
+    cache_valid_time: 3600
+
+- name: Enable ufw
+  community.general.ufw:
+    state: enabled
+    policy: deny
+
+- include_tasks: python_tasks.yml
+
 
 
 
