--- a/roles/proxy_server/handlers/main.yml
+++ b/roles/proxy_server/handlers/main.yml
@@ -1,11 +1,13 @@
 ---
-# handlers file for nginx
+# handlers file for proxy_server
  - name: Start Nginx
    ansible.builtin.service:
      name: nginx
      state: started
+   when: not ansible_check_mode
      
  - name: Restart Nginx
    ansible.builtin.service:
      name: nginx
      state: reloaded
+   when: not ansible_check_mode
