--- a/roles/proxy_server/tasks/main.yml
+++ b/roles/proxy_server/tasks/main.yml
@@ -2,6 +2,17 @@
   ansible.builtin.apt:
     update_cache: yes
     upgrade: yes
+    cache_valid_time: 3600
+
+- name: Enable ufw
+  community.general.ufw:
+    state: enabled
+    policy: deny
+
+- name: Allow http
+  community.general.ufw:
+    rule: allow
+    port: 80 # Did not let me use http profile
 
 - name: Install Nginx
   ansible.builtin.apt:
@@ -22,8 +33,8 @@
     dest: /etc/nginx/sites-enabled/default
     state: absent
 
-- include: local-page.yml
-- include: proxied.yml
+- include_tasks: local_page.yml
+- include_tasks: apps_config.yml
     
 - name: All web permissions
   ansible.builtin.file:
