--- a/Ansible/roles/proxy_server/defaults/main.yml
+++ b/Ansible/roles/proxy_server/defaults/main.yml
@@ -7,9 +7,9 @@ local_page_domain: local.page
 # The target host data that holds the Python app.
 python_app_ip: "127.0.0.1"
 python_app_port: '8693'
-python_app_domain: "python.remote"
+python_app_domain: "http://python.remote"
 
 # The target host data that holds the Golang app.
 golang_app_ip: "127.0.0.1"
 golang_app_port: '3412'
-golang_app_domain: "golang.remote"
+golang_app_domain: "http://golang.remote"
