--- a/Ansible/proxied_playbook.yml
+++ b/Ansible/proxied_playbook.yml
@@ -1,22 +1,22 @@
 ---
-- hosts: proxy_host
-  become: yes
-  become_method: sudo
-  remote_user: test
-  roles:
-    - role: proxy_server
-      vars:
-        - python_app_ip: 127.0.1.1
-        - golang_app_ip: 127.0.1.1
-        - python_app_port: 9091
-        - golang_app_port: 9092
-            
-# - hosts: app_host
+# - hosts: proxy_host
 #   become: yes
 #   become_method: sudo
 #   remote_user: test
 #   roles:
-#     - role: app_server
+#     - role: proxy_server
 #       vars:
+#         - python_app_ip: 127.0.1.1
+#         - golang_app_ip: 127.0.1.1
 #         - python_app_port: 9091
 #         - golang_app_port: 9092
+            
+- hosts: app_host
+  become: yes
+  become_method: sudo
+  remote_user: test
+  roles:
+    - role: app_server
+      vars:
+        - python_app_port: 9091
+        - golang_app_port: 9092
