--- a/Ansible/roles/app_server/tasks/python_tasks.yml
+++ b/Ansible/roles/app_server/tasks/python_tasks.yml
@@ -1,36 +1,41 @@
 ---
+- name: Create group
+  ansible.builtin.group:
+    name: "{{ python_app_user }}"
+    state: present
+
+
 - name: Create user holder for the Python app
-  user: 
+  ansible.builtin.user: 
     name: '{{ python_app_user }}'
     group: '{{ python_app_user }}'
     createhome: no
 
 - name: Install Python
-  apt:
+  ansible.builtin.apt:
     pkg:
-      - python3-pip 
-      - python3-dev  
-      - python3-setuptools
-      - python3-venv
-      - build-essential  
-      - libssl-dev  
-      - libffi-dev
+      - python3
+      - python3-virtualenv
     state: latest
     update_cache: true
 
 - name: Move Python files
   ansible.builtin.copy:
-    src: python_flask
+    src: python_flask/
     dest: '{{ python_app_folder }}'
     owner: '{{ python_app_user }}'
     group: '{{ python_app_user }}'
 
 - name: Configure with the dev modules
   ansible.builtin.pip:
-    requirements: '{{ python_app_requirements }}'
+    requirements: '{{ python_app_folder_requirements }}'
     virtualenv: '{{ python_app_folder_venv }}'
 
 - name: Add uWSGI to the env
   ansible.builtin.pip:
     name: uWSGI
     virtualenv: '{{ python_app_folder_venv }}'
+
+- name: Run uWSGI
+  ansible.builtin.shell: >-
+    {{ python_app_folder_venv }}/bin/uwsgi --http :{{ python_app_port }} --wsgi-file {{ python_app_folder }}/main.py --callable app --logto {{ python_app_log_file }} &
