--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   proxy_server:
     build: Docker
-    container_name: target-1
+    container_name: proxy_server
     ports:
       - "2022:22"
       - "9090:80"
@@ -12,7 +12,7 @@ services:
 
   app_server:
     build: Docker
-    container_name: target-2
+    container_name: app_server
     ports:
       - "2023:22"
       - "9091:9091"
