--- a/Ansible/roles/proxy_server/handlers/main.yml
+++ b/Ansible/roles/proxy_server/handlers/main.yml
@@ -1,13 +1,19 @@
 ---
 # handlers file for proxy_server
  - name: Start Nginx
+   become_method: su
+   become_user: www-data
+   become_flags: '-s /bin/sh'
    ansible.builtin.service:
      name: nginx
      state: started
 
      
  - name: Restart Nginx
+   become_method: su
+   become_user: www-data
+   become_flags: '-s /bin/sh'
    ansible.builtin.service:
      name: nginx
-     state: restarted
+     state: reloaded
 
