--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   proxy_server:
-    build: Docker
+    build: .
     container_name: proxy_server
     ports:
       - "2022:22"
@@ -11,7 +11,7 @@ services:
      - "golang.remote:127.0.1.1"
 
   app_server:
-    build: Docker
+    build: .
     container_name: app_server
     ports:
       - "2023:22"
