Python log file, html changes to distinguish

--- a/Ansible/roles/app_server/defaults/main.yml
+++ b/Ansible/roles/app_server/defaults/main.yml
@@ -7,12 +7,12 @@ python_app_folder_venv: '{{ python_app_folder }}/venv'
 python_app_folder_requirements: "{{ python_app_folder }}/requirements.txt"
 python_app_port: 4322
 python_app_user: alchemist
-python_app_log_file: "/tmp/python_app.log"
+python_app_log_file: "/var/log/python_app.log"
 
 golang_app_domain: golang.local
-golang_app_port: '9403'
+golang_app_port: 9403
 golang_app_user: gopher
 golang_app_folder: "/opt/golang_app"
-golang_app_log_file: "/tmp/golang_app.log"
+golang_app_log_file: "/var/log/golang_app.log"
 
 
