Go app running locally. Edits to the Python one and Diary and Readmes

--- a/Ansible/roles/proxy_server/defaults/main.yml
+++ b/Ansible/roles/proxy_server/defaults/main.yml
@@ -1,15 +1,13 @@
 ---
 # defaults file for proxy_server
 
-# Domain for the hosts file of the system
+# Name for the sites folder in the config
 local_page_domain: local.page
 
 # The target host data that holds the Python app.
 python_app_ip: "app_host"
 python_app_port: '8693'
-python_app_domain: "python.remote"
 
 # The target host data that holds the Golang app.
 golang_app_ip: "app_host"
 golang_app_port: '3412'
-golang_app_domain: "golang.remote"
