--- a/Ansible/roles/app_server/defaults/main.yml
+++ b/Ansible/roles/app_server/defaults/main.yml
@@ -1,15 +1,13 @@
 ---
 # defaults file for app_server
-# The target data for the apps in the system. Domains are for the hosts file
-python_app_domain: python.local
-python_app_folder: "/opt/flask_app"
-python_app_folder_venv: '{{ python_app_folder }}/venv'
-python_app_folder_requirements: "{{ python_app_folder }}/requirements.txt"
+# The target data for the apps in the system.
 python_app_port: 4322
 python_app_user: alchemist
 python_app_log_file: "/var/log/python_app.log"
+python_app_folder: "/opt/flask_app"
+python_app_folder_venv: '{{ python_app_folder }}/venv'
+python_app_folder_requirements: "{{ python_app_folder }}/requirements.txt"
 
-golang_app_domain: golang.local
 golang_app_port: 9403
 golang_app_user: gopher
 golang_app_folder: "/opt/golang_app"
